--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "mongodb": "^6.16.0",
+    "serverless-http": "^3.2.0",
     "zod": "^3.25.17"
   },
   "devDependencies": {
