--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "mongodb": "^6.16.0",
+    "mongoose": "^8.15.1",
     "serverless-http": "^3.2.0",
     "zod": "^3.25.17"
   },
@@ -26,7 +27,7 @@
     "@types/express": "^5.0.2",
     "@types/mongoose": "^5.11.96",
     "@types/node": "^22.15.21",
-    "@vercel/node": "^5.2.0",
+    "@vercel/node": "^5.2.1",
     "nodemon": "^3.1.10",
     "rimraf": "^6.0.1",
     "ts-node": "^10.9.2",
